tests/checker/bad/lib/TestLibCycle1.scillib
import TestLibCycle2

library TestLibCycle1
